[gd_scene load_steps=8 format=3 uid="uid://bw8a1fqfo6ql8"]

[ext_resource type="Script" path="res://Scripts/Behaviors/Enemy.gd" id="1_52jot"]
[ext_resource type="BoxMesh" uid="uid://b4qlp82fa3ekw" path="res://Prefabs/particlePass.tres" id="2_vj4vc"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_cws7c"]
lifetime_randomness = 0.66
particle_flag_rotate_y = true
angle_min = -720.0
angle_max = 720.0
direction = Vector3(2, 2, 0)
spread = 180.0
initial_velocity_min = 5.0
initial_velocity_max = 7.0
angular_velocity_min = -164.82
angular_velocity_max = 385.04
radial_velocity_max = 1.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qq010"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rbxgg"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_cgrtk"]
material = SubResource("StandardMaterial3D_rbxgg")
radius = 0.05
height = 0.2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0fqxx"]
radius = 0.562129
height = 1.92032

[node name="Sandbag" type="CharacterBody3D" groups=["Enemy"]]
script = ExtResource("1_52jot")

[node name="Particles" type="Node3D" parent="."]

[node name="1" type="GPUParticles3D" parent="Particles"]
transform = Transform3D(0.999961, -0.00886619, 0, 0.00886619, 0.999961, 0, 0, 0, 1, 0, 1.36303, 0)
emitting = false
amount = 24
lifetime = 2.33
interp_to_end = 0.15
one_shot = true
explosiveness = 1.0
randomness = 0.96
visibility_aabb = AABB(-2.25396, 0.143266, -1.76689, 4.50792, 2.38461, 3.53377)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_cws7c")
draw_pass_1 = ExtResource("2_vj4vc")

[node name="2" type="GPUParticles3D" parent="Particles"]
transform = Transform3D(0.999961, -0.00886619, 0, 0.00886619, 0.999961, 0, 0, 0, 1, 0, 1.36303, 0)
emitting = false
amount = 24
lifetime = 2.33
interp_to_end = 0.15
one_shot = true
explosiveness = 1.0
randomness = 0.96
visibility_aabb = AABB(-2.25396, 0.143266, -1.76689, 4.50792, 2.38461, 3.53377)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_cws7c")
draw_pass_1 = ExtResource("2_vj4vc")

[node name="3" type="GPUParticles3D" parent="Particles"]
transform = Transform3D(0.999961, -0.00886619, 0, 0.00886619, 0.999961, 0, 0, 0, 1, 0, 1.36303, 0)
emitting = false
amount = 24
lifetime = 2.33
interp_to_end = 0.15
one_shot = true
explosiveness = 1.0
randomness = 0.96
visibility_aabb = AABB(-2.25396, 0.143266, -1.76689, 4.50792, 2.38461, 3.53377)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_cws7c")
draw_pass_1 = ExtResource("2_vj4vc")

[node name="4" type="GPUParticles3D" parent="Particles"]
transform = Transform3D(0.999961, -0.00886619, 0, 0.00886619, 0.999961, 0, 0, 0, 1, 0, 1.36303, 0)
emitting = false
amount = 24
lifetime = 2.33
interp_to_end = 0.15
one_shot = true
explosiveness = 1.0
randomness = 0.96
visibility_aabb = AABB(-2.25396, 0.143266, -1.76689, 4.50792, 2.38461, 3.53377)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_cws7c")
draw_pass_1 = ExtResource("2_vj4vc")

[node name="5" type="GPUParticles3D" parent="Particles"]
transform = Transform3D(0.999961, -0.00886619, 0, 0.00886619, 0.999961, 0, 0, 0, 1, 0, 1.36303, 0)
emitting = false
amount = 24
lifetime = 2.33
interp_to_end = 0.15
one_shot = true
explosiveness = 1.0
randomness = 0.96
visibility_aabb = AABB(-2.25396, 0.143266, -1.76689, 4.50792, 2.38461, 3.53377)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_cws7c")
draw_pass_1 = ExtResource("2_vj4vc")

[node name="6" type="GPUParticles3D" parent="Particles"]
transform = Transform3D(0.999961, -0.00886619, 0, 0.00886619, 0.999961, 0, 0, 0, 1, 0, 1.36303, 0)
emitting = false
amount = 24
lifetime = 2.33
interp_to_end = 0.15
one_shot = true
explosiveness = 1.0
randomness = 0.96
visibility_aabb = AABB(-2.25396, 0.143266, -1.76689, 4.50792, 2.38461, 3.53377)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_cws7c")
draw_pass_1 = ExtResource("2_vj4vc")

[node name="Model" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.11993, 0)
mesh = SubResource("CapsuleMesh_qq010")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.118568, 0.332675, -0.498987)
mesh = SubResource("CapsuleMesh_cgrtk")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.127619, 0.332675, -0.498987)
mesh = SubResource("CapsuleMesh_cgrtk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.18768, 0)
shape = SubResource("CapsuleShape3D_0fqxx")

[node name="Labels" type="Node3D" parent="."]

[node name="HPLabel" type="Label3D" parent="Labels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.78196, 0)
billboard = 1
text = "HP LABEL
"

[node name="HitStunLabel" type="Label3D" parent="Labels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.95879, 0)
billboard = 1
text = "HITSTUN LABEL
"

[node name="PoiseLabel" type="Label3D" parent="Labels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.58368, 0)
billboard = 1
text = "POISE LABEL
"

[node name="RevengeLabel" type="Label3D" parent="Labels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.38364, 0)
billboard = 1
text = "REVENGE LABEL
"
